# radkit

./: README.md
a2a-client/: Cargo.toml  README.md
a2a-client/src/: client.rs  lib.rs
a2a-types/: Cargo.toml  README.md  build.rs
a2a-types/proto/google/api/: annotations.proto  client.proto  field_behavior.proto
a2a-types/src/: lib.rs
a2a-types/tests/: v1_generated.rs
radkit/: Cargo.toml
radkit/src/: errors.rs
radkit/src/agent/: llm_function.rs  llm_worker.rs  skill.rs
radkit/src/models/: content.rs  content_part.rs  llm_response.rs  utils.rs
radkit/src/models/providers/: anthropic_llm.rs  deepseek_llm.rs  gemini_llm.rs  grok_llm.rs  openai_llm.rs  openrouter_llm.rs
radkit/src/runtime/: banner.rs  context.rs  mod.rs  web.rs
radkit/src/runtime/core/: event_bus.rs  executor.rs  status_mapper.rs
radkit/src/runtime/core/negotiator/: default.rs
radkit/src/runtime/memory/: embedder.rs  extensions.rs  facades.rs  mod.rs  types.rs
radkit/src/runtime/memory/backends/: in_memory.rs
radkit/src/runtime/task_manager/: default.rs  in_memory.rs  mod.rs  sqlite.rs
radkit/src/tools/: a2a_agent_tool.rs  tool.rs
radkit/src/tools/memory/: load_memory.rs  mod.rs  save_memory.rs  search_knowledge.rs
radkit/tests/: executor_integration.rs  memory_service_e2e.rs  runtime_test.rs  tool_macro_e2e.rs  worker_execution.rs
