[package]
name = "a2a-types"
version = "0.2.0"
edition = "2024"
build = "build.rs"
license = "MIT"
description = "A2A Protocol Types"
repository = "https://github.com/microagents/radkit"
homepage = "https://radkit.dev"
documentation = "https://radkit.dev"
keywords = ["a2a", "agent2agent", "protocol", "types"]
readme = "README.md"

[dependencies]
base64 = "0.22.1"
pbjson = "0.9.0"
pbjson-types = "0.9.0"
prost = "0.14.3"
prost-types = "0.14.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

[build-dependencies]
pbjson-build = "0.9.0"
prost-build = "0.14.3"
protoc-bin-vendored = "3.2.0"
